--- a/environment.yml
+++ b/environment.yml
@@ -1,8 +1,7 @@
 dependencies:
   - nbserverproxy
-  - pyviz::param=1.9.0
-  - pyviz::pyviz_comms=0.7.2
+  - pyviz::pyviz_comms
   - pyviz::datashader
   - bokeh::bokeh
-  - pyviz::panel=0.5.1
-  - tornado<6 
+  - pyviz::panel
+  - tornado
